<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/login_margin_lr"
        android:layout_marginRight="@dimen/login_margin_lr"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:hint="E-mail"
            android:textSize="@dimen/text_pt_52"
            android:inputType="textEmailAddress"
            android:id="@+id/email_edittext"/>

        <com.hilifecare.ui.view.CustomEditText
            android:id="@+id/pw_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:hint="Password"
            android:textSize="@dimen/text_pt_52"
            android:inputType="textPassword" />
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_pt_60"
        android:id="@+id/login_button"
        android:background="@drawable/bg_button"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/login_bt_margin_lr"
        android:layout_marginRight="@dimen/login_bt_margin_lr"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot ID / Password"
        android:textSize="10dp"
        android:gravity="center"
        android:id="@+id/login_forgot"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:orientation="horizontal"
        android:layout_below="@+id/login_forgot"
        android:layout_alignParentStart="true">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/login_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/login_margin_lr"
            android:layout_marginRight="3dp"
            android:background="@drawable/bg_signup"
            android:layout_weight="1">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/icon_facebook"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook 로그인"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="@dimen/login_margin_lr"
            android:layout_weight="1"
            android:background="@drawable/bg_signup">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/icon_mail"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email로 가입하기"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>
